Bug 33983 - Wrong term "Page" instead of "Slide" in PDF export dialog.
Summary: Wrong term "Page" instead of "Slide" in PDF export dialog.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: All All
: medium trivial
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2011-02-07 01:08 UTC by mike.hall
Modified: 2013-08-15 19:09 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description mike.hall 2011-02-07 01:08:22 UTC
This issue is somewhere between 'normal' and 'enhancement'. Because intuitively the interface is very misleading, I have preferred 'normal'.

The PDF export dialogue box in Impress is partly carried over from Writer.

The dialogue should be 'slide' related, not 'page' related.

The following changes are needed:

On general tab, under 'range'

'Pages' should become 'Slides' (change of text only)

'Selection' should be suppressed - this option currently exports selected fields from a single slide. It is an option that makes sense in Writer, but the limited functionality in Impress is of little use (export of selection applies to a single slide and elements from slide Master cannot (I think) be selected for this purpose). 

Alternatively, if the functionality kept, change the interface to make it clear what it does, because, intuitively, users might reasonably assume that 'selection' means the current selection of slides.

Documentation also to be corrected.
Comment 1 mike.hall 2011-02-07 01:10:58 UTC
See also #33982
Comment 2 Rainer Bielefeld Retired 2011-02-07 02:17:43 UTC
[Reproducible] with "LibreOffice 3.3.0 RC4 - WIN7  Home Premium (64bit) English UI  [OOO330m19 (build 6 / tag 3.3.0.4)]"

I believe current dialog will not cause real problems.

Same in DRAW dialogs

I remove unrelated "See also"

@Reporter
Please report only 1 problem or request per Bug report!
Comment 3 Björn Michaelsen 2011-12-23 11:49:44 UTC
[This is an automated message.]
This bug was filed before the changes to Bugzilla on 2011-10-16. Thus it
started right out as NEW without ever being explicitly confirmed. The bug is
changed to state NEEDINFO for this reason. To move this bug from NEEDINFO back
to NEW please check if the bug still persists with the 3.5.0 beta1 or beta2 prereleases.
Details on how to test the 3.5.0 beta1 can be found at:
http://wiki.documentfoundation.org/QA/BugHunting_Session_3.5.0.-1

more detail on this bulk operation: http://nabble.documentfoundation.org/RFC-Operation-Spamzilla-tp3607474p3607474.html
Comment 4 mike.hall 2011-12-24 04:27:25 UTC
Identical in 3.5.0b3 so have reverted to NEW
Comment 5 A (Andy) 2013-04-20 21:59:55 UTC
reproducible with LO 4.0.2.2 (Win7 Home, 64bit)

Should be an Easy Hack?
Comment 6 Samuel Mehrbrodt 2013-04-25 15:57:44 UTC
The Print dialog has the right term "Slides" in version 4.0.2.
Only the PDF Export dialog still has "Pages".
Comment 7 Julien Nabet 2013-08-15 14:36:11 UTC
Caolán: Indeed filter/uiconfig/ui/pdfgeneralpage.ui is generic ui for LO apps. Any idea how to include specific parts for each parts?
Comment 8 Commit Notification 2013-08-15 16:40:41 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6b205205175b8ce599d2924550040271fd7303e5

Resolves: fdo#33983 use 'Slides' instead of 'Pages' for impress pdf export



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Caolán McNamara 2013-08-15 19:09:54 UTC
Lets use this bug for the "slides/pages" issue which is now fixed by the above commit and leave bug 33982 for the "selection" issue.