Resolves: fdo#33983 use 'Slides' instead of 'Pages' for impress pdf export

Change-Id: Id380514f8f74783a0a0baf61cc9358f2b1bcbc47